--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <!--Navigation Start-->
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container nav-container">
             <a class="navbar-brand mt-2"  href="#">
                 <h3 class="bw-text"><span class="kathys-text">kathy's</span>.bw</h3>
             </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcontent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarcontent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
