--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
     </nav>  
     <!--Navigation End-->
 
+    <!--Home Content Start-->
+    <div class="container">
+        <div class="row col-lg-12">
+            <div class="col-5"></div>
+            <div class="col-7"></div>
+        </div>
+    </div>
+    <!--Home Content End-->
         
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
