--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#testimonials">Testimonials</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact Us</a> 
                     </li>
                 </ul>
