--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--Navigation Start-->
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg bg-light sticky-top">
         <div class="container nav-container">
             <a class="navbar-brand mt-2"  href="#">
                 <h3 class="bw-text"><span class="kathys-text">kathy's</span>.bw</h3>
@@ -45,8 +45,30 @@
     <!--Home Content Start-->
     <div class="container">
         <div class="row col-lg-12">
-            <div class="col-5"></div>
-            <div class="col-7"></div>
+            <div class="col-5">
+
+            </div>
+
+            <div class="col-7">
+                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active data" data-bs-interval="1500">
+                        <img src="photos/eyebrows.jpg" class="w-100" alt="...">
+                      </div>
+                      <div class="carousel-item data" data-bs-interval="1500">
+                        <img src="photos/eyebrowss.jpg" class="w-100" alt="...">
+                      </div>
+                      <div class="carousel-item data" data-bs-interval="1500">
+                        <img src="photos/nails.jpg" class="w-100" alt="...">
+                      </div>
+                      <div class="carousel-item data" data-bs-interval="1500">
+                        <img src="photos/facial.jpeg" class="w-100" alt="...">
+                      </div>
+                      <div class="carousel-item data" data-bs-interval="1500">
+                        <img src="photos/footspamassage.jpg" class="w-100" alt="...">
+                      </div>
+                </div>
+            </div>
         </div>
     </div>
     <!--Home Content End-->
