css file added on home content

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <!--Navigation End-->
 
     <!--Home Content Start-->
-    <div class="container">
+    <div class="container mt-2">
         <div class="row col-lg-12">
             <div class="col-5">
 
             </div>
 
             <div class="col-7">
-                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active data" data-bs-interval="1500">
                         <img src="photos/eyebrows.jpg" class="w-100" alt="...">
