--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.co/ajaxm/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="Home-page.css">
 </head>
 <body>
@@ -43,10 +44,10 @@
     <!--Navigation End-->
 
     <!--Home Content Start-->
-    <div class="container mt-2">
-        <div class="row col-lg-12">
+    <div class="container ">
+        <div class="row col-lg-12 mt-2">
             <div class="col-5">
-
+                
             </div>
 
             <div class="col-7">
