added bg on container and h3,span

--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
     <!--Navigation End-->
 
     <!--Home Content Start-->
-    <div class="container ">
-        <div class="row col-lg-12 mt-2">
-            <div class="col-5">
-                
+    <div class="container-fluid carousel-container" id="home">
+        <div class="row col-lg-12 pt-2 pb-2">
+            <div class="col-lg-5">
+                <h3>Kathys</h3>
+                <span>Beauty & Wellness</span>
             </div>
 
-            <div class="col-7">
+            <div class="col-lg-7">
                 <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active data" data-bs-interval="1500">
