added details on caption container

--- a/index.html
+++ b/index.html
@@ -46,27 +46,30 @@
     <!--Home Content Start-->
     <div class="container-fluid carousel-container" id="home">
         <div class="row col-lg-12 pt-2 pb-2">
-            <div class="col-lg-5">
-                <h3>Kathys</h3>
-                <span>Beauty & Wellness</span>
+            <div class="col-lg-5 d-flex justify-content-center">
+                <div class="caption-container">
+                    <h3>Kathy's</h3>
+                    <p>Beauty & Wellness</p>
+                    <span>"Self-love is the best beauty secret. Treat yourself kindly."</span>
+                </div>
             </div>
 
             <div class="col-lg-7">
                 <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                      <div class="carousel-item active data" data-bs-interval="1500">
+                      <div class="carousel-item active" data-bs-interval="1500">
                         <img src="photos/eyebrows.jpg" class="w-100" alt="...">
                       </div>
-                      <div class="carousel-item data" data-bs-interval="1500">
+                      <div class="carousel-item" data-bs-interval="1500">
                         <img src="photos/eyebrowss.jpg" class="w-100" alt="...">
                       </div>
-                      <div class="carousel-item data" data-bs-interval="1500">
+                      <div class="carousel-item" data-bs-interval="1500">
                         <img src="photos/nails.jpg" class="w-100" alt="...">
                       </div>
-                      <div class="carousel-item data" data-bs-interval="1500">
+                      <div class="carousel-item" data-bs-interval="1500">
                         <img src="photos/facial.jpeg" class="w-100" alt="...">
                       </div>
-                      <div class="carousel-item data" data-bs-interval="1500">
+                      <div class="carousel-item" data-bs-interval="1500">
                         <img src="photos/footspamassage.jpg" class="w-100" alt="...">
                       </div>
                 </div>
