--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.co/ajaxm/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="Home-page.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <!--Navigation Start-->
@@ -45,16 +45,16 @@
 
     <!--Home Content Start-->
     <div class="container-fluid carousel-container" id="home">
-        <div class="row col-lg-12 pt-2 pb-2">
-            <div class="col-lg-5 d-flex justify-content-center">
-                <div class="caption-container">
-                    <h3>Kathy's</h3>
-                    <p>Beauty & Wellness</p>
-                    <span>"Self-love is the best beauty secret. Treat yourself kindly."</span>
+        <div class="row col-lg-12 pt-lg-2 pb-lg-2">
+            <div class="col-lg-5 col-sm-12">
+                <div class="caption-container mt-lg-5 mt-sm-0">
+                    <h3 class="animate__animated animate__fadeInDown" style="animation-delay: 1s;">Kathy's</h3>
+                    <p class="animate__animated animate__fadeInUp" style="animation-delay: 2s;">Beauty & Wellness</p>
+                    <span class="animate__animated animate__fadeInLeft" style="animation-delay: 3s;">"Self-love is the best beauty secret. Treat yourself kindly."</span>
                 </div>
             </div>
 
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-sm-12">
                 <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active" data-bs-interval="1500">
