--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
     <!--Home Content Start-->
     <div class="container-fluid carousel-container" id="home">
         <div class="container">
-            <div class="row col-lg-12 pt-lg-2 pb-lg-2">
-                <div class="col-lg-5 col-md-5 col-sm-12">
-                    <div class="caption-container mt-lg-5 mt-sm-0">
+            <div class="row col-12 pt-lg-2 pb-lg-2">
+                <div class="col-lg-5 col-sm-12">
+                    <div class="caption-container mt-lg-5 mt-sm-5">
                         <h3 class="animate__animated animate__fadeInDown" style="animation-delay: 1s;">Kathy's</h3>
                         <p class="animate__animated animate__fadeInUp" style="animation-delay: 2s;">Beauty & Wellness</p>
                         <span class="animate__animated animate__fadeInLeft fw-1 fs-1" style="animation-delay: 3s;">"Self-love is the best beauty secret. Treat yourself kindly."</span>
                     </div>
                 </div>
 
-                <div class="col-lg-7 col-md-7 col-sm-12">
+                <div class="carousel-image col-lg-7 col-sm-12">
                     <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <!--Slide 1-->
