--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!--Home Content Start-->
     <div class="container-fluid carousel-container" id="home">
         <div class="container">
-            <div class="row col-12 pt-lg-2 pb-lg-2">
+            <div class="row pt-lg-2 pb-lg-2">
                 <div class="col-lg-5 col-sm-12">
                     <div class="caption-container mt-lg-5 mt-sm-5">
                         <h3 class="animate__animated animate__fadeInDown" style="animation-delay: 1s;">Kathy's</h3>
@@ -58,25 +58,26 @@
                 <div class="carousel-image col-lg-7 col-sm-12">
                     <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <!--Slide 1-->
-                        <div class="carousel-item active" data-bs-interval="1800">
-                            <img src="photos/eyebrows.jpg" class="w-100" alt="...">
-                        </div>
-                        <!--Slide 2-->
-                        <div class="carousel-item" data-bs-interval="1800">
-                            <img src="photos/eyebrowss.jpg" class="w-100" alt="...">
-                        </div>
-                        <!--Slide 3-->
-                        <div class="carousel-item" data-bs-interval="1800">
-                            <img src="photos/nails.jpg" class="w-100" alt="...">
-                        </div>
-                        <!--Slide 4-->
-                        <div class="carousel-item" data-bs-interval="1800">
-                            <img src="photos/facial.jpeg" class="w-100" alt="...">
-                        </div>
-                        <!--Slide 5-->
-                        <div class="carousel-item" data-bs-interval="1800">
-                            <img src="photos/footspamassage.jpg" class="w-100" alt="...">
+                                <!--Slide 1-->
+                            <div class="carousel-item active" data-bs-interval="1800">
+                                <img src="photos/eyebrows.jpg" class="w-100" alt="...">
+                            </div>
+                            <!--Slide 2-->
+                            <div class="carousel-item" data-bs-interval="1800">
+                                <img src="photos/eyebrowss.jpg" class="w-100" alt="...">
+                            </div>
+                            <!--Slide 3-->
+                            <div class="carousel-item" data-bs-interval="1800">
+                                <img src="photos/nails.jpg" class="w-100" alt="...">
+                            </div>
+                            <!--Slide 4-->
+                            <div class="carousel-item" data-bs-interval="1800">
+                                <img src="photos/facial.jpeg" class="w-100" alt="...">
+                            </div>
+                            <!--Slide 5-->
+                            <div class="carousel-item" data-bs-interval="1800">
+                                <img src="photos/footspamassage.jpg" class="w-100" alt="...">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -84,6 +85,22 @@
         </div>
     </div>
     <!--Home Content End-->
+
+    <!--About content start-->
+    <div class="container-fluid mt-5" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-12 logo-container">
+                    <img src="photos/logo.png" alt="kathysbw-logo">
+                </div>
+
+                <div class="col-lg-7 col-sm-12 d-flex justify-content-center about-details-container">
+                    <h1>About us</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--About content end-->
         
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
