--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
+    <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!--Css-->
     <link rel="stylesheet" href="Home-page.css">
+    <!--Animate-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
@@ -51,7 +54,7 @@
                     <div class="caption-container mt-lg-5 mt-sm-5">
                         <h3 class="animate__animated animate__fadeInDown" style="animation-delay: 1s;">Kathy's</h3>
                         <p class="animate__animated animate__fadeInUp" style="animation-delay: 2s;">Beauty & Wellness</p>
-                        <span class="animate__animated animate__fadeInLeft fw-1 fs-1" style="animation-delay: 3s;">"Self-love is the best beauty secret. Treat yourself kindly."</span>
+                        <span class="animate__animated animate__fadeInLeft" style="animation-delay: 3s;">"Self-love is the best beauty secret. Treat yourself kindly."</span>
                     </div>
                 </div>
 
@@ -86,7 +89,8 @@
     </div>
     <!--Home Content End-->
 
-    <!--About content start-->
+    <!--Services content start-->
+    
     <div class="container-fluid mt-5" id="about">
         <div class="container">
             <div class="row">
@@ -95,12 +99,12 @@
                 </div>
 
                 <div class="col-lg-7 col-sm-12 d-flex justify-content-center about-details-container">
-                    <h1>About us</h1>
+                    <h1></h1>
                 </div>
             </div>
         </div>
     </div>
-    <!--About content end-->
+    <!--Services content end-->
         
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
