--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>HOME</title>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!--Css-->
-    <link rel="stylesheet" href="Home-page.css">
+    <!--normalize-->
+    <link rel="stylesheet" href="/Css file/normalize.css">
+    <!--Responsive-->
+    <link rel="stylesheet" href="/Css file/responsive.css">
     <!--Animate-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
@@ -15,7 +17,7 @@
     <!--Navigation Start-->
     <nav class="navbar navbar-expand-lg bg-light sticky-top">
         <div class="container nav-container">
-            <a class="navbar-brand mt-2"  href="#">
+            <a class="navbar-brand mt-2"  href="index.html">
                 <h3 class="bw-text"><span class="kathys-text">kathy's</span>.bw</h3>
             </a>
 
@@ -26,19 +28,16 @@
             <div class="collapse navbar-collapse" id="navbarcontent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#home">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="/pages/About-page.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="/pages/Services-page.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#testimonials">Testimonials</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact Us</a> 
+                        <a class="nav-link" href="/pages/Contact-page.html">Contact Us</a> 
                     </li>
                 </ul>
             </div>
@@ -61,7 +60,7 @@
                 <div class="carousel-image col-lg-7 col-sm-12">
                     <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                                <!--Slide 1-->
+                             <!--Slide 1-->
                             <div class="carousel-item active" data-bs-interval="1800">
                                 <img src="photos/eyebrows.jpg" class="w-100" alt="...">
                             </div>
@@ -89,23 +88,6 @@
     </div>
     <!--Home Content End-->
 
-    <!--Services content start-->
-    
-    <div class="container-fluid mt-5" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-12 logo-container">
-                    <img src="photos/logo.png" alt="kathysbw-logo">
-                </div>
-
-                <div class="col-lg-7 col-sm-12 d-flex justify-content-center about-details-container">
-                    <h1></h1>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--Services content end-->
-        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
