--- a/pages/About-page.html
+++ b/pages/About-page.html
@@ -43,6 +43,14 @@
     </nav>  
     <!--Navigation End-->
 
+    <!--Header start-->
+    <div class="container-fluid caption-header">
+        <div class="container">
+            <h1 class="caption-details">About us</h1>
+        </div>
+    </div>
+    <!--Header end-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
