added content in services page(unfinished)

--- a/pages/Services-page.html
+++ b/pages/Services-page.html
@@ -51,6 +51,46 @@
     </div>
     <!--Header end-->
 
+    <!--Services start-->
+    <div class="container services-container bg-light">
+        <h2 class="service-title mb-3">semi permanent make-up</h2>
+
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="card" style="width: 18rem;">
+                    <img src="../photos/eyebrows.jpg" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Eyebrow Embroidery</h5>
+                      <p class="card-text">"Bold brows, effortless beauty."</p>
+                      <span class="prices">Price: 3,000 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card" style="width: 18rem;">
+                    <img src="../photos/lip-tattoo.avif" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Lip Tattoo</h5>
+                      <p class="card-text">"Kissable lips, eternally stunning."</p>
+                      <span class="prices">Price: 3,000 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card" style="width: 18rem;">
+                    <img src="../photos/eye-liner.avif" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Eyeliner</h5>
+                      <p class="card-text">"Enhancing gazes, effortlessly."</p>
+                      <span class="prices">Price: 1,500 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Services end-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
