--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>  
     <!--Navigation End-->
 
-    <!--Home Content Start-->
+    <!--Home container-1 Start-->
     <div class="container-fluid carousel-container" id="home">
         <div class="container">
             <div class="row pt-lg-2 pb-lg-2">
@@ -88,12 +88,14 @@
             </div>
         </div>
     </div>
-    <!--Home Content End-->
+    <!--Home container-1 end-->
+
+    
 
     <footer>
         <div class="container-fluid footer-container bg-light">
             <div class="icons-container">
-                <ul class="social-media-icons" style="text-align: center;">
+                <ul class="social-media-icons">
                     <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
