--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!--normalize-->
-    <link rel="stylesheet" href="/Css file/normalize.css">
+    <link rel="stylesheet" href="/Css file/style.css">
     <!--Responsive-->
-    <link rel="stylesheet" href="/Css file/responsive.css">
+    <link rel="stylesheet" href="/Css file/style1.css">
     <!--Animate-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--Font awesome-->
