relinked css file

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--Navigation End-->
 
     <!--Home container-1 Start-->
-    <div class="container-fluid carousel-container" id="home">
+    <div class="container-fluid carousel-container">
         <div class="container">
             <div class="row pt-lg-2 pb-lg-2">
                 <div class="col-lg-5 col-sm-12">
