--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!--normalize-->
-    <link rel="stylesheet" href="/Css file/style.css">
+    <link rel="stylesheet" href="./Css/style.css">
     <!--Responsive-->
-    <link rel="stylesheet" href="/Css file/style1.css">
+    <link rel="stylesheet" href="./Css/style1.css">
     <!--Animate-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--Font awesome-->
@@ -19,7 +19,7 @@
     <!--Navigation Start-->
     <nav class="navbar navbar-expand-lg bg-light sticky-top">
         <div class="container nav-container">
-            <a class="navbar-brand mt-2"  href="index.html">
+            <a class="navbar-brand mt-2"  href="./index.html">
                 <h3 class="bw-text"><span class="kathys-text">kathy's</span>.bw</h3>
             </a>
 
@@ -30,16 +30,16 @@
             <div class="collapse navbar-collapse" id="navbarcontent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link active" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/About-page.html">About</a>
+                        <a class="nav-link" href="./pages/About-page.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/Services-page.html">Services</a>
+                        <a class="nav-link" href="./pages/Services-page.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/Contact-page.html">Contact Us</a> 
+                        <a class="nav-link" href="./pages/Contact-page.html">Contact Us</a> 
                     </li>
                 </ul>
             </div>
