--- a/pages/About-page.html
+++ b/pages/About-page.html
@@ -7,9 +7,9 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!--normalize-->
-    <link rel="stylesheet" href="../Css file/style.css">
+    <link rel="stylesheet" href="../Css/style.css">
     <!--Responsive-->
-    <link rel="stylesheet" href="../Css file/style1.css">
+    <link rel="stylesheet" href="../Css/style1.css">
 </head>
 <body>
     <!--Navigation Start-->
@@ -29,13 +29,13 @@
                         <a class="nav-link active" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="About-page.html">About</a>
+                        <a class="nav-link" href="./About-page.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Services-page.html">Services</a>
+                        <a class="nav-link" href="./Services-page.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/Contact-page.html">Contact Us</a> 
+                        <a class="nav-link" href="./Contact-page.html">Contact Us</a> 
                     </li>
                 </ul>
             </div>
