added new photos for services page

--- a/pages/Services-page.html
+++ b/pages/Services-page.html
@@ -52,12 +52,14 @@
     <!--Header end-->
 
     <!--Services start-->
-    <div class="container services-container bg-light">
+
+    <!--Semi permanent content start-->
+    <div class="container services-container bg-light mb-5">
         <h2 class="service-title mb-3">semi permanent make-up</h2>
 
         <div class="row">
             <div class="col-lg-4 col-sm-12">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="../photos/eyebrows.jpg" class="card-img-top" alt="Eyebrow Embroidery">
                     <div class="card-body">
                       <h5 class="card-title">Eyebrow Embroidery</h5>
@@ -68,7 +70,7 @@
             </div>
 
             <div class="col-lg-4 col-sm-12">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="../photos/lip-tattoo.avif" class="card-img-top" alt="Eyebrow Embroidery">
                     <div class="card-body">
                       <h5 class="card-title">Lip Tattoo</h5>
@@ -79,7 +81,7 @@
             </div>
 
             <div class="col-lg-4 col-sm-12">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="../photos/eye-liner.avif" class="card-img-top" alt="Eyebrow Embroidery">
                     <div class="card-body">
                       <h5 class="card-title">Eyeliner</h5>
@@ -90,6 +92,236 @@
             </div>
         </div>
     </div>
+    <!--Semi permanent content end-->
+
+    <!--9 n 1 organic facial start-->
+    <div class="container services-container bg-light mb-5">
+        <h2 class="service-title mb-3">9 n 1 organic facial</h2>
+
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/bb-glow.avif" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Korean BB glow</h5>
+                      <p class="card-text">"Radiant skin in an instant with Korean BB Glow!"</p>
+                      <span class="prices">Price: 1,800 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/bb blush.jpg" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Korean BB blush</h5>
+                      <p class="card-text">"Get that natural flush with Korean BB Blush!"</p>
+                      <span class="prices">Price: 1,800 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/microneedling.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Microneedling</h5>
+                      <p class="card-text">"Transform your skin with Microneedling!"</p>
+                      <span class="prices">Price: 1,500 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--9 n 1 organic facial end-->
+
+    <!--Nails start-->
+    <div class="container services-container bg-light mb-5">
+        <h2 class="service-title mb-3">Nails & Hand/Foot spa</h2>
+
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/Gel-mani-pedi.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Gel Manicure & Pedicure</h5>
+                      <p class="card-text">"Polished Perfection: Gel Mani-Pedi"</p>
+                      <span class="prices">Price: 600 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/foot-spa-massage.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Foot Spa</h5>
+                      <p class="card-text">"Rejuvenate with a Luxurious Foot Spa"</p>
+                      <span class="prices">Price: 450 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/hand-spa.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Hand spa</h5>
+                      <p class="card-text">"Hand Bliss: Revitalize with a Spa Treatment"</p>
+                      <span class="prices">Price: 350 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Nails end-->
+
+    <!--Eyelash Extensions start-->
+    <div class="container services-container bg-light mb-5">
+        <h2 class="service-title mb-3">Eyelash Extensions</h2>
+
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/natural-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Natural Eye</h5>
+                      <p class="card-text">"Effortless Elegance: Natural Eye Lash Extensions"</p>
+                      <span class="prices">Price: 400 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/classic-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Classic Eye</h5>
+                      <p class="card-text">"Timeless Glam: Classic Eyelash Extensions"</p>
+                      <span class="prices">Price: 400 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/open-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Open Eye</h5>
+                      <p class="card-text">"Bold & Beautiful: Open Eye Lash Extensions"</p>
+                      <span class="prices">Price: 500 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../photos/cat-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Cat Eye</h5>
+                      <p class="card-text">"Feline Flair: Cat-Eye Lash Extensions"</p>
+                      <span class="prices">Price: 500 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../photos/doll-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Doll Eye</h5>
+                      <p class="card-text">"Doll-Like Charm: Doll-Eye Lash Extensions"</p>
+                      <span class="prices">Price: 500 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../photos/volume-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Volume Eye</h5>
+                      <p class="card-text">"Luxurious Volume: Volume-Eye Lash Extensions"</p>
+                      <span class="prices">Price: 500 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Eyelash extensions end-->
+
+    <!--IV Infusion Therapy start-->
+    <div class="container services-container bg-light mb-5">
+        <h2 class="service-title mb-3">IV Infusion Therapy</h2>
+
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/Gluta-drip.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Glutathione Drip</h5>
+                      <p class="card-text">"Detox & Rejuvenate: Glutathione Drip"</p>
+                      <span class="prices">Price: 1,800 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/Gluta-push.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Glutathione Push</h5>
+                      <p class="card-text">"Boost Your Glow: Glutathione Push"</p>
+                      <span class="prices">Price: 550 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12">
+                <div class="card">
+                    <img src="../photos/skinny-drip.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Skinny Drip</h5>
+                      <p class="card-text">"Streamlined Beauty: Skinny Drip"</p>
+                      <span class="prices">Price: 600 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../photos/vitamin-drip.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Vitamin Drip</h5>
+                      <p class="card-text">"Revitalize & Recharge: Vitamin Drip"</p>
+                      <span class="prices">Price: 600 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../photos/collagen-drip.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Collagen Drip</h5>
+                      <p class="card-text">"Youthful Radiance: Collagen Drip"</p>
+                      <span class="prices">Price: 1,500 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../photos/Placenta.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <div class="card-body">
+                      <h5 class="card-title">Placenta</h5>
+                      <p class="card-text">"Renew & Restore: Placenta Treatment"</p>
+                      <span class="prices">Price: 1,200 <a href="https://www.facebook.com/profile.php?id=100086269420017" class="btn btn-primary">Message Us!</a></span>
+                    </div>
+                </div>
+            </div>
+    <!--IV Infusion Therapy end-->
+
     <!--Services end-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
