--- a/pages/Contact-page.html
+++ b/pages/Contact-page.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../Css/style.css">
     <!--Responsive-->
     <link rel="stylesheet" href="../Css/style1.css">
+    <!--Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!--Navigation Start-->
@@ -50,6 +52,30 @@
         </div>
     </div>
     <!--Header end-->
+
+    <!--Contact containers start-->
+
+    <div class="container-fluid">
+        <div class="container contact-container">
+            <h4><i class="fa-solid fa-phone"></i> Phone<span> 09669847789</span></h4>
+            <p>We are committed to providing excellent customer service and are available to assist you promptly via phone calls during both weekday and weekend hours. Our knowledgeable team is more than happy to offer personalized advice regarding suitable treatments, provide information on availability and prices.</p>
+            <h4><i class="fa-solid fa-location-dot"></i> Address</h4>
+            <p>Matinong bldg, ground floor stall #7, Surallah South Cotabato.</p>
+            <h4><i class="fa-solid fa-envelope"></i> Email</h4>
+            <p>Please feel free to reach out to us via email at <a href="#">kiddolucks5@gmail.com</a> for any inquiries, requests, or further information. We will make sure to respond promptly and provide the assistance you need.</p>
+        </div>
+    </div>
+
+    <!--Contact containers end-->
+
+    <!--Google map start-->
+
+    <div class="container-fluid map-header bg-light">
+        <h3>"Find us on Google Maps!"</h3>
+    </div>
+    <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=kathys beauty and wellness&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanox.io/">Gacha Nox</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}</style></div>
+
+    <!--Google map end-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
